--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.2.0",
     "next": "9.5.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
