--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.2.0",
     "next": "9.5.5",
     "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "tailwindcss": "^1.8.13"
+    "react-dom": "16.13.1"
   },
   "devDependencies": {
     "@types/node": "^14.11.8",
     "@types/react": "^16.9.51",
+    "postcss": "^8.1.1",
+    "postcss-100vh-fix": "^1.0.2",
+    "postcss-viewport-height-correction": "^2.0.2",
+    "tailwindcss": "^1.8.13",
+    "@tailwindcss/typography": "^0.2.0",
     "typescript": "^4.0.3"
   }
 }
