--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^0.2.0",
+    "@tailwindcss/ui": "^0.6.2",
     "next": "9.5.5",
     "react": "16.13.1",
     "react-dom": "16.13.1"
