--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "www",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "clean": "rm -rf ./.next",
@@ -9,21 +9,21 @@
     "start": "next start"
   },
   "dependencies": {
-    "@headlessui/react": "^0.2.0",
-    "@tailwindcss/ui": "^0.6.2",
-    "next": "9.5.5",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "@headlessui/react": "^1.4.1",
+    "next": "^11.1.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.2.0",
+    "@tailwindcss/typography": "^0.4.1",
     "@types/node": "^14.11.8",
     "@types/react": "^16.9.51",
+    "autoprefixer": "^10.3.7",
     "cross-env": "^7.0.2",
-    "postcss": "^8.1.1",
+    "postcss": "^8.3.9",
     "postcss-100vh-fix": "^1.0.2",
     "postcss-viewport-height-correction": "^2.0.2",
-    "tailwindcss": "^1.9.2",
-    "typescript": "^4.0.3"
+    "tailwindcss": "^2.2.16",
+    "typescript": "^4.4.3"
   }
 }
